
* Remove obsolete discussion of PQM in documentation about how to
  contribute to Bazaar.  (Martin Pool, #588444)

API Changes
***********

* ``bzrlib.branch.InterBranch._get_branch_formats_to_test`` now returns
  an iterable of format pairs, rather than just a single pair, permitting
  InterBranch objects that work with multiple permutations to be
  comprehensively tested. (Robert Collins)

* ``bzrlib.knit.KnitSequenceMatcher``, which has been deprecated since
  2007, has been deleted.  Use ``PatienceSequenceMatcher`` from
  ``bzrlib.patiencediff`` instead. (Andrew Bennetts)

* ``bzrlib.tests.blackbox.ExternalBase`` is deprecated.  It provided only
  one method ``check_output``, and we now recommend checking command
  output using ``run_script``. (Martin Pool)

* ``bzrlib.transport.ssh.SSHVendor.connect_ssh`` now returns an object
  that implements the interface of ``bzrlib.transport.ssh.SSHConnection``.
  Third-party implementations of ``SSHVendor`` may need to be updated
  accordingly.  Similarly, any code using ``SSHConnection`` directly will
  need to be updated.  (Andrew Bennetts)

* The constructor of ``bzrilb.smart.medium.SmartSSHClientMedium`` has
  changed to take an ``SSHParams`` instance (replacing many individual
  values).  (Andrew Bennetts)

Internals
*********

* ``bzrlib.osutils.get_terminal_encoding`` will now only mutter its
  selection when explicitly requested; this avoids many duplicate calls
  being logged when helpers, wrappers and older code that manually calls
  it are executed it is now logged deliberately by the ui setup code.
  (Robert Collins)

* Improved ``bzrlib.urlutils`` to handle lp:foo/bar URLs. (Gordon Tyler)

* ``bzrlib._c_static_tuple.StaticTuple`` now implements ``__sizeof__``, so
  that ``sys.getsizeof`` and other memory analysis tools will report more
  accurate results. (Andrew Bennetts)

* The symbol_versioning module can now cleanup after itself -
  ``suppress_deprecation_warnings`` now returns a cleanup function.